--- a/page-css.html
+++ b/page-css.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
+    <link rel="stylesheet" href="assets/CSS/style.css">
+    <style>
+        nav
+        {
+            color: blueviolet;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -28,11 +35,13 @@
     <p>Apaioxonado por videogames desde meu primeiro super nintendo, dado de presente por meu tio quando eu tinha 5 anos.</p>
     <p>ALfabetizado nas fases bônus de Donkey Kong, e após a porta da alfabetização ser aberta nunca mais parou de buscar conhecimento nas mais diversas areas. </p>
     <p>Tendo preferência sempre pela area das ciências exatas eum forte espirito competitivo me participou de todas as edições da OBMEP que pode participar</p>
-    <p>resultando em 3 medalhas. </p>
+    <p style="color: purple;" >resultando em 3 medalhas. </p>
     <p>Me tornei professor de física, química e matemática e agora estou em transição de carreira para a area de TI para realizar o meu sonho de ser um profissional da tecnologia</p>
     <p>e continuar sendo um Nerd e CrossFiteiro nas  horas vagas</p>
     <h2>Imagem da minha série favorita</h2>
-    <img src="assets/img/betbenny.jpg" alt="Beth and Beny">
+    <div style="background-color: aqua">
+    <img  class="img1" src="assets/img/betbenny.jpg" alt="Beth and Beny">
+    </div>
     <h3>Video do meu tema de lol favorito</h3>
     <iframe width="1280" height="720" src="https://www.youtube.com/embed/GzJQK93wFtk" title="Guardiãs Estelares 2022 | Tema Orquestral Oficial – League of Legends" frameborder="50" allow="accelerometer;
      autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
