--- a/page-css.html
+++ b/page-css.html
@@ -37,7 +37,7 @@
     <p>Tendo preferência sempre pela area das ciências exatas eum forte espirito competitivo me participou de todas as edições da OBMEP que pode participar</p>
     <p style="color: purple;" >resultando em 3 medalhas. </p>
     <p>Me tornei professor de física, química e matemática e agora estou em transição de carreira para a area de TI para realizar o meu sonho de ser um profissional da tecnologia</p>
-    <p>e continuar sendo um Nerd e CrossFiteiro nas  horas vagas</p>
+    <p id="p-unic">e continuar sendo um Nerd e CrossFiteiro nas  horas vagas</p>
     <h2>Imagem da minha série favorita</h2>
     <div style="background-color: aqua">
     <img  class="img1" src="assets/img/betbenny.jpg" alt="Beth and Beny">
