--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
+    <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 <body>
     <header>
@@ -24,13 +25,18 @@
     <p>
         Sobre mim:
     </p>
-
-    <p>Apaioxonado por videogames desde meu primeiro super nintendo, dado de presente por meu tio quando eu tinha 5 anos.</p>
-    <p>ALfabetizado nas fases bônus de Donkey Kong, e após a porta da alfabetização ser aberta nunca mais parou de buscar conhecimento nas mais diversas areas. </p>
-    <p>Tendo preferência sempre pela area das ciências exatas eum forte espirito competitivo me participou de todas as edições da OBMEP que pode participar</p>
-    <p>resultando em 3 medalhas. </p>
-    <p>Me tornei professor de física, química e matemática e agora estou em transição de carreira para a area de TI para realizar o meu sonho de ser um profissional da tecnologia</p>
-    <p>e continuar sendo um Nerd e CrossFiteiro nas  horas vagas</p>
+   <div class="container">
+     <div>
+        <p>
+        Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss deixa as pessoas mais interessantis.Quem num gosta di mé, boa gentis num é.Mauris nec dolor in eros commodo tempor. Aenean aliquam molestie leo, vitae iaculis nisl.Admodum accumsan disputationi eu sit. Vide electram sadipscing et per.
+        </p>
+     </div> 
+     <div>
+     <img src="assets/img/Beth-Harmon-The-Queens-Gambit-Anya-Taylor-Joy-Wool-Coat_1445x.webp">
+     </div>
+       
+   </div>
+    
     <h2>Imagem da minha série favorita</h2>
     <img src="assets/img/betbenny.jpg" alt="Beth and Beny">
     <h3>Video do meu tema de lol favorito</h3>
