--- a/contato.html
+++ b/contato.html
@@ -5,32 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 <body>
-    <ul>
-        <li><a href="index.html"> Home</a></li>
+    <nav>
+        <p>Blog Pessoal</p>
+        <ul class="menu">
+        <li><a href="page-css.html"> Home</a></li>
         <li><a href="contato.html"> Contato</a></li>
         <li><a href="jogos.html"> Jogos preferidos</a></li>
         <li><a href="series.html"> Séries preferidas</a></li>
-    </ul>
+        </ul>
+   </nav>
     <h1>
         Entre em contato comigo:
     </h1>
-    <form>
+    <div><form>
         <label for="nome">Nome:</label><br>
-        <input type="text" name="nome" id="nome">
+        <input type="text" name="nome" id="nome" onkeyup="validaInputMinChar(nome, 2)">
+        <div id="txtnome"></div>
 <br>
 <br>
         <label for="email">E-mail:</label><br>
-        <input type="email" id="email">
+        <input type="email" name="email" id="email" onkeyup="validaEmail(email, 2)">
+        <div id = "txtemail"></div>
 <br>
 <br>
-        <label for="assunto">E-mail:</label><br>
+        <label for="assunto">Assunto:</label><br>
         <textarea name="assunto" id="assunto" cols="30" rows="10"></textarea>
+        <div id="txtassunto"></div>
         <br>
         <br>
         <button>Enviar</button>
-    </form>
-    <h2><a href="https://github.com/xMoogle">Meu github</a></h2>
+    </form></div>
+    <h2><a class="hoverGrey noTextDecoration colorBlack" href="https://github.com/xMoogle">Meu github</a></h2>
+    <hr>
+    <footer>
+        <p class="center black">
+        Todos os direitos reservados: Matheus Chaves &copy;
+        <div class="container"> 
+            <a href="https://www.linkedin.com/" target="_blank">
+                <img class="footIcon pd-30" src="assets/img/linkedin.png" alt="linkedinIcon">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+                <img class="footIcon pd-30" src="assets/img/instagram.png" alt="instagramIcon">
+            </a>
+            <a href="https://store.steampowered.com/" target="_blank">
+                <img class="footIcon pd-30" src="assets/img/steam.png" alt="SteamIcon">
+            </a>
+        </div>
+        </p>
+    </footer>
+    <script src="assets/JS/script.js"></script>
 </body>
 </html>
